--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    //spring security tag library
+    implementation 'org.springframework.security:spring-security-taglibs'
+    //JSTL
+    implementation 'javax.servlet:jstl'
+    // JASPER
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
