--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,8 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+    path match:
+      matching-strategy: ant_path_matcher
 
   datasource:
     driver-class-name: org.h2.Driver
