Spring Actuator 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,10 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+management:
+  endpoints:
+    add:
+      exposure:
+        include: '*'
+        exclude: 'shutdown'
