--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
+apply plugin: 'war'
 
 java {
     sourceCompatibility = '11'
@@ -39,12 +40,12 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
     // Spring Actuator
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.2'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.2'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
-//    runtimeOnly 'com.mysql:mysql-connector-j'
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
