--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,38 +1,38 @@
-server:
-  port: 8001
-  servlet:
-    context-path: /
-    encoding:
-      charset: utf-8
-      enabled: true
-      force: true
-
-spring:
-  mvc:
-    view:
-      prefix: /WEB-INF/views/
-      suffix: .jsp
-    path match:
-      matching-strategy: ant_path_matcher
-
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb1
-    username: test
-    password:
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#      use-new-id-generator-mappings: false
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
-
-  jackson:
-    serialization:
-      fail-on-empty-beans: false
+#server:
+#  port: 8001
+#  servlet:
+#    context-path: /
+#    encoding:
+#      charset: utf-8
+#      enabled: true
+#      force: true
+#
+#spring:
+#  mvc:
+#    view:
+#      prefix: /WEB-INF/views/
+#      suffix: .jsp
+#    path match:
+#      matching-strategy: ant_path_matcher
+#
+#  datasource:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:testdb1
+#    username: test
+#    password:
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#      naming:
+#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+##      use-new-id-generator-mappings: false
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    database-platform: org.hibernate.dialect.H2Dialect
+#
+#  jackson:
+#    serialization:
+#      fail-on-empty-beans: false
